# SuOS

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  SuOS.cpp  SuOS.h  code_Summarizer.py  codebase_summary.json  codebase_summary.txt  compile_commands.json  debian-toolchain.cmake  introduction.md  settings.json  sync_config.py
.continue/rules/: terminal-use.md
core/: SuOS_Config.h  config.yaml
core/Graphics/:  VramProvider.hpp
core/Graphics/Rga/include/: RgaBasic.hpp  RgaEngine.hpp  RgaLink.hpp  RgaService.hpp  RgaServiceClient.hpp  RgaTypes.hpp
core/Graphics/Rga/src/: RgaBasic.cpp  RgaEngine.cpp  RgaLink.cpp
core/Graphics/Vram/:  VramProvider.hpp  VramProvider.hpp
core/Graphics/Vtimer/: VTimerHardwareAdapter.hpp  vtimer.hpp
core/Main/Database/: Datastruct.h  suDbError.h  suDbRegistryMgr.hpp
core/Main/include/: main.h
core/Main/src/: main.cpp
core/Network_service/Connectors/base/: BaseConn_def.hpp  BaseConnection.hpp
core/Router/: Router.hpp  Router_ErrorCode.h  Router_Heartbeat.hpp  Router_State.hpp  suRouterAuth.hpp
core/SysService/: SysService.hpp  stopCause.h  sysService_df.h
core/suRuntime/include/: suRuntime.hpp
core/suUDS/basic/include/: Uds_Client.h  Uds_Error_type.h  Uds_Server.h
core/suUDS/basic/src/: Uds_Client.cpp  Uds_Server.cpp  test_uds.cpp
core/suUDS/suUdsMgr/: Uds_ClientMgr.hpp  Uds_ClientMgr_ErrorCode.h  Uds_ClientState.hpp  Uds_Client_heartbeat.hpp  Uds_df.h
core/suUDS/suUdsMsg/: Uds_MsgBuilder.hpp  Uds_MsgParser.hpp  suUdsMsg.fbs  suUdsMsg_generated.h
core/suUDS/suUdsMsg/part/: Uds_PartExampleBuilder.hpp  Uds_PartExampleParser.hpp  Uds_partMsg_config.h  flatbuffers_generator.py  suUdsPartExample.fbs  suUdsPartExample_generated.h
core/suUDS/suUdsMsg/part/general/: GeneralMsg.fbs  GeneralMsg_fromMain.fbs  GeneralMsg_fromMain_generated.h  GeneralMsg_generated.h  GeneralMsg_toMain.fbs  GeneralMsg_toMain_generated.h  Uds_GeneralMsgBuilder.hpp  Uds_GeneralMsgParser.hpp  Uds_GeneralMsg_fromMainBuilder.hpp  Uds_GeneralMsg_fromMainParser.hpp  Uds_GeneralMsg_toMainBuilder.hpp  Uds_GeneralMsg_toMainParser.hpp
core/suUDS/suUdsMsg/part/graphics/rga/: GraphicsMsg_FromRga.fbs  GraphicsMsg_FromRga_generated.h  GraphicsMsg_ToRga.fbs  GraphicsMsg_ToRga_generated.h  Uds_GraphicsMsg_FromRgaBuilder.hpp  Uds_GraphicsMsg_FromRgaParser.hpp  Uds_GraphicsMsg_ToRgaBuilder.hpp  Uds_GraphicsMsg_ToRgaParser.hpp
core/suUDS/suUdsMsg/part/router/: RouterMsg.fbs  RouterMsg_fromRouter.fbs  RouterMsg_fromRouter_generated.h  RouterMsg_generated.h  RouterMsg_toRouter.fbs  RouterMsg_toRouter_generated.h  Uds_RouterMsgBuilder.hpp  Uds_RouterMsgParser.hpp  Uds_RouterMsg_fromRouterBuilder.hpp  Uds_RouterMsg_fromRouterParser.hpp  Uds_RouterMsg_toRouterBuilder.hpp  Uds_RouterMsg_toRouterParser.hpp
core/suUDS/suUdsMsg/partExample/: Uds_PartExampleBuilder.hpp  Uds_PartExampleParser.hpp  suUdsPartExample.fbs  suUdsPartExample_generated.h
